...

val dummyNotes = listOf(
    NoteItem(0, "Dummy text", "Dummy note text", 0xFF0000FF.toInt(), 10),
    NoteItem(1, "Another dummy text that is long enough to take 2 lines", "More dummy note text, a text so ridiculously long that there it requires multiple rows", 0xFF00FF00.toInt(), 15),
)

const val DELETE_NOTE_BTN_TAG = "delete_note_btn"

data class NoteItem(
    val id: Long,
    val originalText: String,
    val note: String,
    @param:ColorInt val color: Int,
...
