...
            }
        }
    }
}

const val SPINNER_TEXT_TAG = "spinner_text"
const val SPINNER_LIST_TAG = "spinner_list"
const val DIALOG_LIST_TAG = "dialog list tag"
const val CONFIRM_BTN_TAG = "confirm_btn"

@Preview
@Composable
fun ExternalLinksDialogPreview() {
    AppTheme {
        val links = ExternalLinkList(List(4) { ExternalLinkUI("External site ${it + 1}", "", "") })
...
