...
            remember { mutableStateOf(text) },
            languages,
            languages,
            targetLangIndex = 1,
            sourceLangIndex = 0,
            detectedLanguageState = remember { mutableIntStateOf(3) },
            wordState = remember { mutableStateOf(WordState(WordUI("Original", "en",  "Translation"), 1, Span(6, 11))) }
        )
    }
}

@Preview
@Composable
fun EditWordDialogPreview() {
    AppTheme {
        EditWordDialog(
            true,
            "Hola",
            "es",
            "Hello, hi, hey",
            "The most common Spanish greeting used when meeting someone",
            LanguagesList(listOf("English", "Spanish", "German"), listOf("en", "es", "de")),
            true
        )
    }
}

const val NOT_SAVED_ID = 0
...
